@@ -907,7 +907,7 @@ int process_merge(int nb) {
 			args->input_has_a_seq = FALSE;
 			args->debayer = FALSE;
 			args->multiple_output = FALSE;
-			args->output_type = SEQ_REGULAR; // fallback if symlink does not work
+			args->output_type = SEQ_REGULAR;
 			args->make_link = TRUE;
 			gettimeofday(&(args->t_start), NULL);
 			start_in_new_thread(convert_thread_worker, args);
@@ -2794,33 +2794,31 @@ int process_convertraw(int nb) {
 	}
 
 	for (int i = 2; i < nb; i++) {
-		if (word[i]) {
-			char *current = word[i], *value;
-			if (!strcmp(current, "-debayer")) {
-				debayer = TRUE;
-			} else if (!strcmp(current, "-fitseq")) {
-				output = SEQ_FITSEQ;
-				if (!g_str_has_suffix(destroot, com.pref.ext))
-					str_append(&destroot, com.pref.ext);
-			} else if (g_str_has_prefix(current, "-start=")) {
-				value = current + 7;
-				idx = (g_ascii_strtoull(value, NULL, 10) <= 0 || g_ascii_strtoull(value, NULL, 10) >= INDEX_MAX) ? 1 : g_ascii_strtoull(value, NULL, 10);
-			} else if (g_str_has_prefix(current, "-out=")) {
-				value = current + 5;
-				if (value[0] == '\0') {
-					siril_log_message(_("Missing argument to %s, aborting.\n"), current);
+		char *current = word[i], *value;
+		if (!strcmp(current, "-debayer")) {
+			debayer = TRUE;
+		} else if (!strcmp(current, "-fitseq")) {
+			output = SEQ_FITSEQ;
+			if (!g_str_has_suffix(destroot, com.pref.ext))
+				str_append(&destroot, com.pref.ext);
+		} else if (g_str_has_prefix(current, "-start=")) {
+			value = current + 7;
+			idx = (g_ascii_strtoull(value, NULL, 10) <= 0 || g_ascii_strtoull(value, NULL, 10) >= INDEX_MAX) ? 1 : g_ascii_strtoull(value, NULL, 10);
+		} else if (g_str_has_prefix(current, "-out=")) {
+			value = current + 5;
+			if (value[0] == '\0') {
+				siril_log_message(_("Missing argument to %s, aborting.\n"), current);
+				return 1;
+			}
+			if (!g_file_test(value, G_FILE_TEST_EXISTS)) {
+				if (g_mkdir_with_parents(value, 0755) < 0) {
+					siril_log_color_message(_("Cannot create output folder: %s\n"), "red", value);
 					return 1;
 				}
-				if (!g_file_test(value, G_FILE_TEST_EXISTS)) {
-					if (g_mkdir_with_parents(value, 0755) < 0) {
-						siril_log_color_message(_("Cannot create output folder: %s\n"), "red", value);
-						return 1;
-					}
-				}
-				gchar *filename = g_build_filename(value, destroot, NULL);
-				g_free(destroot);
-				destroot = filename;
 			}
+			gchar *filename = g_build_filename(value, destroot, NULL);
+			g_free(destroot);
+			destroot = filename;
 		}
 	}
 
@@ -2897,28 +2895,27 @@ int process_link(int nb) {
 	}
 
 	for (int i = 2; i < nb; i++) {
-		if (word[i]) {
-			char *current = word[i], *value;
-			if (g_str_has_prefix(current, "-start=")) {
-				value = current + 7;
-				idx = (g_ascii_strtoull(value, NULL, 10) <= 0 || g_ascii_strtoull(value, NULL, 10) >= INDEX_MAX) ?
-						1 : g_ascii_strtoull(value, NULL, 10);
-			} else if (g_str_has_prefix(current, "-out=")) {
-				value = current + 5;
-				if (value[0] == '\0') {
-					siril_log_message(_("Missing argument to %s, aborting.\n"), current);
+		char *current = word[i], *value;
+		if (g_str_has_prefix(current, "-start=")) {
+			value = current + 7;
+			idx = (g_ascii_strtoull(value, NULL, 10) <= 0 ||
+					g_ascii_strtoull(value, NULL, 10) >= INDEX_MAX) ?
+				1 : g_ascii_strtoull(value, NULL, 10);
+		} else if (g_str_has_prefix(current, "-out=")) {
+			value = current + 5;
+			if (value[0] == '\0') {
+				siril_log_message(_("Missing argument to %s, aborting.\n"), current);
+				return 1;
+			}
+			if (!g_file_test(value, G_FILE_TEST_EXISTS)) {
+				if (g_mkdir_with_parents(value, 0755) < 0) {
+					siril_log_color_message(_("Cannot create output folder: %s\n"), "red", value);
 					return 1;
 				}
-				if (!g_file_test(value, G_FILE_TEST_EXISTS)) {
-					if (g_mkdir_with_parents(value, 0755) < 0) {
-						siril_log_color_message(_("Cannot create output folder: %s\n"), "red", value);
-						return 1;
-					}
-				}
-				gchar *filename = g_build_filename(value, destroot, NULL);
-				g_free(destroot);
-				destroot = filename;
 			}
+			gchar *filename = g_build_filename(value, destroot, NULL);
+			g_free(destroot);
+			destroot = filename;
 		}
 	}
 
@@ -2999,35 +2996,33 @@ int process_convert(int nb) {
 	}
 
 	for (int i = 2; i < nb; i++) {
-		if (word[i]) {
-			char *current = word[i], *value;
-			if (!strcmp(current, "-debayer")) {
-				debayer = TRUE;
-				make_link = FALSE;
-			} else if (!strcmp(current, "-fitseq")) {
-				output = SEQ_FITSEQ;
-				if (!g_str_has_suffix(destroot, com.pref.ext))
-					str_append(&destroot, com.pref.ext);
-			} else if (g_str_has_prefix(current, "-start=")) {
-				value = current + 7;
-				idx = (g_ascii_strtoull(value, NULL, 10) <= 0 || g_ascii_strtoull(value, NULL, 10) >= INDEX_MAX) ?
-						1 : g_ascii_strtoull(value, NULL, 10);
-			} else if (g_str_has_prefix(current, "-out=")) {
-				value = current + 5;
-				if (value[0] == '\0') {
-					siril_log_message(_("Missing argument to %s, aborting.\n"), current);
+		char *current = word[i], *value;
+		if (!strcmp(current, "-debayer")) {
+			debayer = TRUE;
+			make_link = FALSE;
+		} else if (!strcmp(current, "-fitseq")) {
+			output = SEQ_FITSEQ;
+			if (!g_str_has_suffix(destroot, com.pref.ext))
+				str_append(&destroot, com.pref.ext);
+		} else if (g_str_has_prefix(current, "-start=")) {
+			value = current + 7;
+			idx = (g_ascii_strtoull(value, NULL, 10) <= 0 || g_ascii_strtoull(value, NULL, 10) >= INDEX_MAX) ?
+				1 : g_ascii_strtoull(value, NULL, 10);
+		} else if (g_str_has_prefix(current, "-out=")) {
+			value = current + 5;
+			if (value[0] == '\0') {
+				siril_log_message(_("Missing argument to %s, aborting.\n"), current);
+				return 1;
+			}
+			if (!g_file_test(value, G_FILE_TEST_EXISTS)) {
+				if (g_mkdir_with_parents(value, 0755) < 0) {
+					siril_log_color_message(_("Cannot create output folder: %s\n"), "red", value);
 					return 1;
 				}
-				if (!g_file_test(value, G_FILE_TEST_EXISTS)) {
-					if (g_mkdir_with_parents(value, 0755) < 0) {
-						siril_log_color_message(_("Cannot create output folder: %s\n"), "red", value);
-						return 1;
-					}
-				}
-				gchar *filename = g_build_filename(value, destroot, NULL);
-				g_free(destroot);
-				destroot = filename;
 			}
+			gchar *filename = g_build_filename(value, destroot, NULL);
+			g_free(destroot);
+			destroot = filename;
 		}
 	}
 
