@@ -106,6 +106,8 @@ uint64_t be64_to_cpu(uint64_t x);
 gboolean isrgb(fits *fit);
 int get_extension_index(const char *filename);
 image_type get_type_from_filename(const gchar *filename);
+char* remove_ext_from_filename(const char *basename);
+gboolean string_is_a_path(const char *file);
 int is_readable_file(const char *filename);
 gboolean is_forbiden_in_filename(gchar c);
 gboolean file_name_has_invalid_chars(const char *name);
@@ -118,7 +120,6 @@ int update_sequences_list(const char *sequence_name_to_select);
 void expand_home_in_filename(char *filename, int size);
 double get_normalized_value(fits*);
 void swap_param(double*, double*);
-char* remove_ext_from_filename(const char *basename);
 gchar* str_append(char **data, const char *newdata);
 char *format_basename(char *root, gboolean can_free);
 float compute_slope(WORD *lo, WORD *hi);
