@@ -30,6 +30,7 @@ siril 1.0.0
 * New ROWORDER FITS keyword that should be used by several programm now
 * New astrometry annotation ability
 * New snapshot function
+* New conversion internal algorithm, can convert any sequence to any other sequence type too now
 * Handle datetime in TIFF file
 * Image display refactoring (Guillaume Roguez)
 * Added color profile in TIFF and PNG files
@@ -43,6 +44,7 @@ siril 1.0.0
 * Selection can be moved and freely modified, its size is displayed in UI (Sébastien Rombauts)
 * Undo/Redo buttons now display the operations they act upon (Sébastien Rombauts)
 * Improved color saturation tool with a background factor to adjust the strength
+* Reduced memory used by global registration
 * Fixed code for Big Endian machine (Flössie)
 * Fixed bug in SER joining operation when Bayer information was lost
 * Fixed a bug of inaccessible directories in MacOS Catalina
